# serde_traitobject

./: .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
src/: convenience.rs  lib.rs
tests/: test.rs
