[package]
name = "serde_traitobject"
version = "0.2.4"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["trait-object","serialization","serde","distributed"]
description = """
Serializable and deserializable trait objects.

This library enables the serialization and deserialization of trait objects such that they can be sent between other processes running the same binary.
"""
repository = "https://github.com/alecmocatta/serde_traitobject"
homepage = "https://github.com/alecmocatta/serde_traitobject"
documentation = "https://docs.rs/serde_traitobject/0.2.4"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/serde_traitobject", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
erased-serde = "0.3"
metatype = "0.2"
relative = "0.2"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
serde_closure = "0.2.2"
wasm-bindgen-test = "0.3"

[[test]]
name = "test"
path = "tests/test.rs"
harness = false
